--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test1",
+  "name": "custom-gltf-extension-demo",
   "version": "0.8.0",
   "main": "src/index.tsx",
   "scripts": {
@@ -8,8 +8,8 @@
   },
   "authors": [
     {
-      "name": "瞬光",
-      "email": "shunguang.dty@alibaba-inc.com"
+      "name": "dtysky",
+      "email": "dtysky@outlook.com"
     }
   ],
   "license": "MIT",
